# Milkspider

./: .gitignore
archive/: README.md
v3.1/: .gitignore  CMakeLists.txt  FINAL_BUILD.md  QUICKSTART.md  README.md  STATUS.md  build_and_deploy.sh  build_windows.bat  deploy.sh  toolchain-milkv-duo.cmake
v3.1/archive/: README.md
v3.1/brain_linux/: CMakeLists.txt
v3.1/brain_linux/archive/: README.md
v3.1/brain_linux/archive/brain_daemon_skeleton/: CMakeLists.txt  boot_demo.cpp  error_handler.cpp  error_handler.hpp  eye_client_unix.cpp  eye_client_unix.hpp  ipc_muscle_rpmsg.cpp  json_protocol.cpp  json_protocol.hpp  lidar_driver.cpp  lidar_driver.hpp  main.cpp  motion_loader.cpp  obstacle_avoidance.cpp  obstacle_avoidance.hpp  scan_controller.hpp  task_manager.cpp  task_manager.hpp  telemetry.cpp  telemetry.hpp
v3.1/brain_linux/brain_daemon/: boot_demo.hpp  config_store.cpp  config_store.hpp  ipc_muscle_rpmsg.hpp  motion_loader.hpp  scan_controller.cpp  ws_server.cpp  ws_server.hpp
v3.1/brain_linux/eye_service/: CMakeLists.txt  eye_animator.cpp  eye_animator.hpp  eye_renderer.cpp  eye_renderer.hpp  gc9d01_dualeye_spi.cpp  gc9d01_dualeye_spi.hpp  main.cpp
v3.1/brain_linux/eye_service/gpio/: gpio_backend.hpp  gpio_sysfs.cpp
v3.1/brain_linux/src/: CMakeLists.txt  README.md  build.sh  distance_sensor.cpp  distance_sensor.h  eye_client.cpp  eye_client.h  logger.h  mailbox.cpp  mailbox.h  main.cpp  scan_controller.cpp  scan_controller.h  serial_control.cpp  serial_control.h  sha1.h  shared_memory.cpp  shared_memory.h  toolchain-milkv-duo.cmake
v3.1/common/: crc16_ccitt_false.c  crc16_ccitt_false.h  eye_event_protocol.h  limits.h  protocol_posepacket31.h  shared_motion_buffer.h  timebase.h  versioning.h
v3.1/deploy/: S99spider  install_services.sh  spider-brain.service  spider-eye.service
v3.1/docs/: WIRING.md
v3.1/muscle_rtos/: BUILD_FREERTOS.md  CMakeLists.txt  CMakeLists_sdk_v1.txt  app_main.c  app_main_simple.c  app_main_test.c  app_main_v1.c  deploy_full_v1.sh  enable_i2c_sdk_v1.sh  freertos_config.h  motion_task.h  patch_comm_main.sh
v3.1/muscle_rtos/archive/: README.md  motion_task.c  rpmsg_motion_rx.c  rpmsg_motion_rx.h
v3.1/muscle_rtos/drivers/: i2c_hal.c  i2c_hal.h  i2c_mmio.c  limits.h  pca9685.c  pca9685.h
v3.1/muscle_rtos/motion_runtime/: interpolator.c  interpolator.h
v3.1/muscle_rtos/patches/: comm_cmakelists.txt  hal_cmakelists.txt
v3.1/muscle_rtos/safety/: failsafe.c  failsafe.h  fault_flags.c  fault_flags.h  watchdog.c  watchdog.h
v3.1/python/: brain_daemon.py  calibrated_client.py  calibration.py  control_ui.html  demo_autonomous.py  demo_live.py  demo_walk.py  gait_library.py  mini_ws.py  obstacle_avoidance.py  pca9685_test.py  quick_test.py  spider_client.py  spider_motion.py  spider_sim.py  spider_test.py  test_eyes.py  test_hardware.py  test_obstacle.py  test_scan.py  test_serial.py  test_servos.py  vl53l0x_test.py  ws_test_client.py
v3.1/python/archive/: README.md
v3.1/tests/: CMakeLists.txt  test_clamp.cpp  test_crc16.cpp  test_interpolator.cpp  test_json_protocol.cpp  test_posepacket.cpp
v3.1/tests/mocks/: mock_pca9685.hpp  mock_rpmsg.hpp
